--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Generated files
 .idea/**/contentModel.xml
 
-# Sensitive or high-churn files
+# Sensitive or high-churn filess
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
